chore: event bus integration with push (#358)