@@ -46,4 +46,23 @@ dependencies {
 
     api Dependencies.firebaseMessaging
     implementation Dependencies.googlePlayServicesBase
+
+    testImplementation(platform(Dependencies.junitBom))
+    testImplementation(Dependencies.junitJupiter)
+    testImplementation(Dependencies.mockk)
+
+    // enables running JUnit 4 tests within the JUnit 5 (jupiter) platform.
+    testRuntimeOnly(Dependencies.junitVintageEngine)
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    filter {
+        excludeTestsMatching("*Integration*")
+    }
+    ignoreFailures = true
+    // https://github.com/mockk/mockk/issues/681
+    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED"
+    )
 }
